# local-translation

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  preview.md  skills-lock.json  tsconfig.json
docs/adr/: 0001-tauri-desktop-framework.md  0002-provider-interface-pattern.md  0003-sqlite-local-storage.md
docs/agents/: domain.md  issue-tracker.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: errors.test.ts  ocr-merger.test.ts  prompt-builder.test.ts  providers.test.ts  text-chunker.test.ts
src/components/: LanguageSelector.tsx  SettingsPanel.tsx  TranslationPanel.tsx
src/core/: errors.ts  ocr-merger.ts  prompt-builder.ts  text-chunker.ts  types.ts
src/hooks/: useSettings.ts  useTranslation.ts
src/providers/: ollama.ts  openai-compat.ts
